@@ -1,3 +1,6 @@
+Major changes in 3.38.1:
+* Updated translations
+
 Major changes in 3.38.0:
 * Updated translations
 
